changes to visualization and load

--- a/templates/EventLoading/index.html.twig
+++ b/templates/EventLoading/index.html.twig
@@ -7,61 +7,40 @@
 
 {% block body %}
 
-	<div style="height:100vh; width:100%;">
-		<h1>Create Milestone</h1>
+	<div class="w-100 row" style="height:100vh;">
+		<div class="col-12 col-md-6">
+			<h1>Milestone Load:</h1>
 
-		<div class="dropdown-center my-4">
-			<select id="milestoneDropdown" class="dropdown-center">
-				<option value="">Select Milestone</option>
-				{% for milestone in milestoneIds %}
-					<option value="{{ milestone.id }}">{{ milestone.id }}</option>
-				{% endfor %}
-			</select>
+			<div class="dropdown-center my-4">
+				<select id="milestoneDropdown" class="dropdown-center">
+					<option value="">Select Milestone</option>
+					{% for milestone in milestoneIds %}
+						<option value="{{ milestone.id }}">{{ milestone.id }}-{{ milestone.name }}</option>
+					{% endfor %}
+				</select>
+			</div>
+
+			<button class="btn btn-success my-4" onclick="newMilestone()">+</button>
+
+			<div id="MilestoneContainer"></div>
 		</div>
+		<div class="col-12 col-md-6">
+			<h1>Project Load:</h1>
 
-		<button class="btn btn-success my-4" onClick="newMilestone()">+</button>
+			<div class="dropdown-center my-4">
+				<select id="ProjectDropdown" class="dropdown-center">
+					<option value="">Select Project</option>
+					{% for project in projectsIds %}
+						<option value="{{ project.id }}">{{ project.id }}-{{ project.name }}</option>
+					{% endfor %}
+				</select>
+			</div>
 
-		<div id="MilestoneContainer"></div>
+			<button class="btn btn-success my-4" onclick="newMilestone()">+</button>
+
+			<div id="MilestoneContainer"></div>
+		</div>
 	</div>
+</div>
 
-	<script src="{{ asset('js/formsFunctions.js') }}"></script>
-
-
-	<script>
-
-    function newMilestone() {
-        var xhr = new XMLHttpRequest();
-		xhr.onreadystatechange = function () {
-		if (xhr.readyState === XMLHttpRequest.DONE) {
-		if (xhr.status === 200) {
-		document.getElementById('MilestoneContainer').innerHTML = xhr.responseText;
-		} else {
-		console.error('Failed to fetch milestone form:', xhr.status);
-		}
-		}
-		};
-		xhr.open('GET', '/new/milestone', true);
-		xhr.send();
-    }
-
-		document.addEventListener('DOMContentLoaded', function () { // Add event listener for dropdown change
-document.getElementById('milestoneDropdown').addEventListener('change', function () {
-var selectedId = this.value;
-if (selectedId) { // Make AJAX request to get milestone form
-var xhr = new XMLHttpRequest();
-xhr.onreadystatechange = function () {
-if (xhr.readyState === XMLHttpRequest.DONE) {
-if (xhr.status === 200) {
-document.getElementById('MilestoneContainer').innerHTML = xhr.responseText;
-} else {
-console.error('Failed to fetch milestone form:', xhr.status);
-}
-}
-};
-xhr.open('GET', '/new/milestone?id=' + selectedId, true);
-xhr.send();
-}
-});
-});
-	</script>
-{% endblock %}
+<script src="{{ asset('js/formsFunctions.js') }}"></script>{% endblock %}
