--- a/templates/EventLoading/create_Project.twig
+++ b/templates/EventLoading/create_Project.twig
@@ -1,23 +1,13 @@
-{% extends 'base.html.twig' %}
+<h1>Create Project</h1>
 
-{% block title %}Add New Project
-{% endblock %}
+{{ form_start(projectForm) }}
 
-{% block head %}{% endblock %}
+{{ form_row(projectForm.name) }}
+{{ form_row(projectForm.description) }}
+{{ form_row(projectForm.fileref) }}
+{{ form_row(projectForm.iconref) }}
+{{ form_row(projectForm.mileStone) }}
 
-{% block body %}
-	<h1>Create Project</h1>
+<button type="button" onclick="submitForm('{{path('project_new')}}', 'projectForm', {{projectcur.id}})">Create</button>
 
-	{{ form_start(projectForm) }}
-
-	{{ form_row(projectForm.name) }}
-	{{ form_row(projectForm.description) }}
-	{{ form_row(projectForm.fileref) }}
-	{{ form_row(projectForm.iconref) }}
-	{{ form_row(projectForm.mileStone) }}
-
-	<button type="submit">Create</button>
-
-	{{ form_end(projectForm) }}
-
-{% endblock %}
+{{ form_end(projectForm) }}
