--- a/templates/EventLoading/create_Project.twig
+++ b/templates/EventLoading/create_Project.twig
@@ -1,6 +1,6 @@
 <h1>Create Project</h1>
 
-{{ form_start(projectForm) }}
+{{ form_start(projectForm, {'attr': {'id': 'projectForm'}}) }}
 
 {{ form_row(projectForm.name) }}
 {{ form_row(projectForm.description) }}
