--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -10,9 +10,9 @@
 
 {% block body %}
 
-	{% include 'AboutMe.twig' %}
+	{% include 'index/AboutMe.twig' %}
 	{% include 'GameHighlights.twig' with {'projects': Project, 'type': 'games','textRef': 'GamesPortfolio', 'headText': 'Games Portfolio', 'darkbg': true} %}
-	{% include 'ProjectsHighlights.twig' with {'projects': Project, 'type': 'web-projects','textRef': 'WebPortfolio', 'headText': 'Web Portfolio', 'darkbg': true, 'color': 'main-bg-gradient-alter'} %}
+	{% include 'ProjectsHighlights.twig' with {'projects': Project, 'type': 'web-projects','textRef': 'WebPortfolio', 'headText': 'Web Portfolio', 'darkbg': true, 'color': 'bg-main-gradient-alter'} %}
 	{% include 'contact.twig' %}
 
 {% endblock %}
