--- a/templates/projectDetail.twig
+++ b/templates/projectDetail.twig
@@ -17,7 +17,7 @@
 	<hr>
 	<div class="mx-3">
 		<div class="card bg-dark">
-			<div class="card-header text-center main-bg-dark">
+			<div class="card-header text-center bg-main-dark">
 				<h3>{{ project.name }}</h3>
 			</div>
 			<div class="card-body bg-dark d-flex justify-content-center align-items-center" style="overflow: hidden;">
