--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -5,15 +5,7 @@ body {
   background-color: #252b29;
 }
 
-a,
-label,
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6, li, span {
+a, label, p, h1, h2, h3, h4, h5, h6, li, span {
   font-family: "Pixelify Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
@@ -26,7 +18,7 @@ h6, li, span {
 
 
 .main-color {
-  color: #6F1B6F;
+  color: #6f1b6f;
 }
 
 .main-color-dark {
@@ -41,30 +33,29 @@ h6, li, span {
   color: #1f2020;
 }
 
-.main-bg {
+.bg-main {
   background-color: #6F1B6F;
-  ;
 }
-.main-bg-gradient {
+.bg-main-gradient {
   background: linear-gradient(to bottom right, #6F1B6F, #57a9a1);
 }
-.main-bg-gradient-circle {
+.bg-main-gradient-circle {
   background: linear-gradient(to bottom right, #6F1B6F, #57a9a1);
 }
 
-.main-bg-gradient-alter {
+.bg-main-gradient-alter {
   background: linear-gradient(to bottom right, #57a9a1, #6F1B6F);
 }
 
-.main-bg-dark {
+.bg-main-dark {
   background-color: #211e22;
 }
 
-.main-bg-dark-translucent {
+.bg-main-dark-translucent {
   background-color: #2c1631e8;
 }
 
-.main-bg-light {
+.bg-main-light {
   color: #cfa6cb;
 }
 
@@ -103,7 +94,7 @@ h6, li, span {
 
 /* Style for WebKit-based browsers (e.g., Chrome, Safari) */
 ::-webkit-scrollbar {
-  background-color: #000000; /* Sets the background color of the scrollbar to transparent */
+  background-color: #252b29; /* Sets the background color of the scrollbar to transparent */
 }
 
 /* Style for the scrollbar handle */
@@ -112,7 +103,7 @@ h6, li, span {
 }
 
 html {
-  scrollbar-color: #812181 #000000; /* Sets the scrollbar handle color to red */
+  scrollbar-color: #812181 #252b29; /* Sets the scrollbar handle color to red */
 }
 
 .shadow-custom {
