--- a/templates/Projects.twig
+++ b/templates/Projects.twig
@@ -10,13 +10,13 @@
 
 {% block body %}
 
-	<section id="projects" class="main-bg-dark px-2" style="min-height: 100vh;">
+	<section id="projects" class="bg-main-dark px-2" style="min-height: 100vh;">
 
 		{% include 'index/IndexHeader.twig' with {'textRef': textRef, 'headText': headText, 'darkbg': true} %}
 
 		<div class="d-flex flex-column justify-content-center align-items-center" style="min-height: 75vh; width: 100%;">
 
-			<div class="container rounded-5 main-bg-gradient m-3 my-md-4 shadow-custom">
+			<div class="container rounded-5 bg-main-gradient m-3 my-md-4 shadow-custom">
 				<div class="row justify-content-center m-2">
 
 					{% for project in projects %}
