--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,9 +26,11 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 		
 		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-<!-- bootstrap 
+		
+		<!-- bootstrap 
 		<link href="{{ asset('bootstrap/css/bootstrap.css') }}" rel="stylesheet">
-		<script src="{{ asset('bootstrap/js/bootstrap.js') }}"></script> -->
+		<script src="{{ asset('bootstrap/js/bootstrap.js') }}"></script> 
+		-->
 
 		<!-- sweetalert2 -->
 		<link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.5/dist/sweetalert2.min.css" rel="stylesheet">
@@ -61,9 +63,7 @@
 		{% endblock %}
 		{% block body %}{% endblock %}
 		{% block foot %}
-			<footer class="bg-dark text-white text-center py-3" style="min-height: 25vh;">
-				<p>&copy; 2024 . All Rights Reserved.</p>
-			</footer>
+			{% include 'index/footer.twig' %}
 		{% endblock %}
 	</body>
 </html>
