--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -14,7 +14,7 @@
 			<div class="row justify-content-center">
 				<div class="col-md-6">
 					<div class="card">
-						<div class="card-header main-bg-dark">
+						<div class="card-header bg-main-dark">
 							<h1 class="text-center m-2">Register</h1>
 						</div>
 						<div class="container card-body bg-dark">
@@ -51,7 +51,7 @@
 	<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 		<div class="modal-dialog modal-xl">
 			<div class="modal-content bg-dark">
-				<div class="modal-header main-bg-dark">
+				<div class="modal-header bg-main-dark">
 					<h1 class="modal-title fs-5" id="exampleModalLabel">Terms of Service</h1>
 					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 				</div>
