--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -10,7 +10,7 @@
 			<div class="row justify-content-center">
 				<div class="col-md-6">
 					<div class="card">
-						<div class="card-header main-bg-dark">
+						<div class="card-header bg-main-dark">
 							<h1 class="text-center m-2">Log In</h1>
 						</div>
 						<div class="container card-body bg-dark">
