--- a/templates/timeline_cv/index.html.twig
+++ b/templates/timeline_cv/index.html.twig
@@ -27,7 +27,7 @@
 	<div id="timeline" class="row m-0 p-0 accent-bg-dark" style="min-height: 75vh;">
 		{% include 'index/IndexHeader.twig' with {'upRef': 'aboutme', 'textRef': 'timeline', 'headText': 'timeline', 'darkbg': true} %}
 
-		<div class="col-12 row fixed-top py-2 position-sticky main-bg-dark rounded-4" style="z-index: 1042;">
+		<div class="col-12 row fixed-top py-2 position-sticky bg-main-dark rounded-4" style="z-index: 1042;">
 
 			<div class="col-md-8 m-0 p-0">
 				{% set all_tags = [] %}
@@ -102,7 +102,7 @@
 					{% for event in events_in_year %}
 						<div class=" col-12 row justify-content-center text-white">
 
-							<div class="timeline-event card rounded-4 m-5 shadow-custom main-bg-gradient{% if loop.index  % 2 == 0 %}-alter{% endif %}" style="width: 36rem; max-width: 90vw;">
+							<div class="timeline-event card rounded-4 m-5 shadow-custom bg-main-gradient{% if loop.index  % 2 == 0 %}-alter{% endif %}" style="width: 36rem; max-width: 90vw;">
 
 								<div class="card-body row m-0 justify-content-center text-center">
 
